--- a/bookgall.html
+++ b/bookgall.html
@@ -30,7 +30,7 @@
     
     <div>
         <h1>THE ALCHEMIST</h1>
-        <img src="./images/alcha" >
+        <img src="./images/alcha.jfif" >
         <p>paulo coelho</p><br>
         <p>The Alchemist (Portuguese: O Alquimista) is a novel by Brazilian author Paulo Coelho which was first published in 1988. Originally written in Portuguese, it became a widely translated international bestseller.</p>
     
